; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/marvell/octeontx2/af/extr_rvu.c_rvu_mbox_intr_handler.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/marvell/octeontx2/af/extr_rvu.c_rvu_mbox_intr_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rvu = type { i32, i32, %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i32 }

@BLKADDR_RVUM = common dso_local global i32 0, align 4
@RVU_AF_PFAF_MBOX_INT = common dso_local global i32 0, align 4
@IRQ_HANDLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @rvu_mbox_intr_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rvu_mbox_intr_handler(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.rvu*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.rvu*
  store %struct.rvu* %9, %struct.rvu** %5, align 8
  %10 = load %struct.rvu*, %struct.rvu** %5, align 8
  %11 = getelementptr inbounds %struct.rvu, %struct.rvu* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  store i32 %12, i32* %6, align 4
  %13 = load %struct.rvu*, %struct.rvu** %5, align 8
  %14 = load i32, i32* @BLKADDR_RVUM, align 4
  %15 = load i32, i32* @RVU_AF_PFAF_MBOX_INT, align 4
  %16 = call i32 @rvu_read64(%struct.rvu* %13, i32 %14, i32 %15)
  store i32 %16, i32* %7, align 4
  %17 = load %struct.rvu*, %struct.rvu** %5, align 8
  %18 = load i32, i32* @BLKADDR_RVUM, align 4
  %19 = load i32, i32* @RVU_AF_PFAF_MBOX_INT, align 4
  %20 = load i32, i32* %7, align 4
  %21 = call i32 @rvu_write64(%struct.rvu* %17, i32 %18, i32 %19, i32 %20)
  %22 = call i32 (...) @rmb()
  %23 = load %struct.rvu*, %struct.rvu** %5, align 8
  %24 = getelementptr inbounds %struct.rvu, %struct.rvu* %23, i32 0, i32 3
  %25 = load %struct.rvu*, %struct.rvu** %5, align 8
  %26 = getelementptr inbounds %struct.rvu, %struct.rvu* %25, i32 0, i32 2
  %27 = load %struct.TYPE_2__*, %struct.TYPE_2__** %26, align 8
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = load i32, i32* %7, align 4
  %31 = call i32 @rvu_queue_work(i32* %24, i32 0, i32 %29, i32 %30)
  %32 = load i32, i32* %6, align 4
  %33 = icmp sgt i32 %32, 64
  br i1 %33, label %34, label %49

34:                                               ; preds = %2
  %35 = load %struct.rvu*, %struct.rvu** %5, align 8
  %36 = call i32 @RVU_PF_VFPF_MBOX_INTX(i32 1)
  %37 = call i32 @rvupf_read64(%struct.rvu* %35, i32 %36)
  store i32 %37, i32* %7, align 4
  %38 = load %struct.rvu*, %struct.rvu** %5, align 8
  %39 = call i32 @RVU_PF_VFPF_MBOX_INTX(i32 1)
  %40 = load i32, i32* %7, align 4
  %41 = call i32 @rvupf_write64(%struct.rvu* %38, i32 %39, i32 %40)
  %42 = load %struct.rvu*, %struct.rvu** %5, align 8
  %43 = getelementptr inbounds %struct.rvu, %struct.rvu* %42, i32 0, i32 1
  %44 = load i32, i32* %6, align 4
  %45 = load i32, i32* %7, align 4
  %46 = call i32 @rvu_queue_work(i32* %43, i32 64, i32 %44, i32 %45)
  %47 = load i32, i32* %6, align 4
  %48 = sub nsw i32 %47, 64
  store i32 %48, i32* %6, align 4
  br label %49

49:                                               ; preds = %34, %2
  %50 = load %struct.rvu*, %struct.rvu** %5, align 8
  %51 = call i32 @RVU_PF_VFPF_MBOX_INTX(i32 0)
  %52 = call i32 @rvupf_read64(%struct.rvu* %50, i32 %51)
  store i32 %52, i32* %7, align 4
  %53 = load %struct.rvu*, %struct.rvu** %5, align 8
  %54 = call i32 @RVU_PF_VFPF_MBOX_INTX(i32 0)
  %55 = load i32, i32* %7, align 4
  %56 = call i32 @rvupf_write64(%struct.rvu* %53, i32 %54, i32 %55)
  %57 = load %struct.rvu*, %struct.rvu** %5, align 8
  %58 = getelementptr inbounds %struct.rvu, %struct.rvu* %57, i32 0, i32 1
  %59 = load i32, i32* %6, align 4
  %60 = load i32, i32* %7, align 4
  %61 = call i32 @rvu_queue_work(i32* %58, i32 0, i32 %59, i32 %60)
  %62 = load i32, i32* @IRQ_HANDLED, align 4
  ret i32 %62
}

declare dso_local i32 @rvu_read64(%struct.rvu*, i32, i32) #1

declare dso_local i32 @rvu_write64(%struct.rvu*, i32, i32, i32) #1

declare dso_local i32 @rmb(...) #1

declare dso_local i32 @rvu_queue_work(i32*, i32, i32, i32) #1

declare dso_local i32 @rvupf_read64(%struct.rvu*, i32) #1

declare dso_local i32 @RVU_PF_VFPF_MBOX_INTX(i32) #1

declare dso_local i32 @rvupf_write64(%struct.rvu*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
